# HexaMotion

./: .gitignore  CMakeLists.txt  README.md  build_and_run.bat  main.cpp
modules/: CMakeLists.txt  build.bat
modules/controller/: CMakeLists.txt  _project_tree.txt  build_controller.bat
modules/controller/src/: RobotController.cpp  RobotController.h
modules/controller/test/: gtest_robot_controller_main.cpp
modules/hardware_hal/: CMakeLists.txt  HardwareManager_build.bat
modules/hardware_hal/docs/: module_hardware_hal.req.md
modules/hardware_hal/src/: HalTypes.h  HardwareManager.cpp  HardwareManager.h
modules/hardware_hal/src/drivers/sim/: SimDriver.cpp  SimDriver.h
modules/hardware_hal/src/drivers/udp/: UdpDriver.cpp  UdpDriver.h  UdpPeer.hpp
modules/hardware_hal/src/interface/: IDriver.h
modules/hardware_hal/tests/: gtest_hardware_hal_main.cpp  robot_utility.py
modules/hardware_hal/tests/governor/: main.cpp
modules/hardware_hal/tests/realtime/: main.cpp
modules/hardware_hal/tests/safety/: main.cpp
modules/hardware_hal/tests/sim/: main.cpp
modules/kinematics_nrt/: CMakeLists.txt  build_kinematics_nrt.bat
modules/kinematics_nrt/docs/: kinematics_nrt.req.md
modules/kinematics_nrt/src/frame_processor/: FrameTransformer.cpp  FrameTransformer.h
modules/kinematics_nrt/src/kinematic_solver/: DummyKinematicSolver.cpp  IKError.h  KdlKinematicSolver.cpp  KdlKinematicSolver.h  KinematicSolver.h
modules/kinematics_nrt/src/robot_model/: KinematicModel.cpp  KinematicModel.h
modules/kinematics_nrt/tests/: gtest_frame_transformer_main.cpp  gtest_kinematic_solver_main.cpp  lbr_iisy_11_r1300.urdf
modules/kinematics_nrt/tests/mocks/: MockKinematicSolver.h
modules/motion_manager_rt/: CMakeLists.txt  _dev3_tree_0.txt  build_motion_namager.bat
modules/motion_manager_rt/docs/: motion_manager.req.md
modules/motion_manager_rt/src/: MotionManager.cpp  MotionManager.h
modules/motion_manager_rt/tests/: gtest_motion_manager_main.cpp
modules/planning_nrt/: CMakeLists.txt  bug_investigation.md  build_planning_nrt.bat
modules/planning_nrt/docs/: planning_nrt.req.md
modules/planning_nrt/src/planner/: Trajectory.cpp  Trajectory.h  TrajectoryPlanner.cpp  TrajectoryPlanner.h
modules/planning_nrt/src/profiles/: MotionProfile.cpp  MotionProfile.h
modules/planning_nrt/src/segments/: MotionSegment.cpp  MotionSegment.h  TrajectoryInterpolator.cpp  TrajectoryInterpolator.h
modules/planning_nrt/tests/: gtest_trajectory_planner_main.cpp
modules/trajectory_queue_lf/src/: TrajectoryQueue.h
modules/trajectory_queue_lf/tests/: gtest_trajectory_queue_main.cpp
modules/trajectory_queue_lf/txt/: __trajectory_queue_lf_code_base_2026-01-17_00-22-59_headers.txt  _trajectory_queue_lf_code_base_2026-01-17_00-22-59_part_1.txt  _trajectory_queue_lf_tree_2026-01-17_00-22-59.txt
